--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.6",
     "mongodb": "^3.6.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
@@ -38,6 +39,7 @@
     "@types/hapi__joi": "^17.1.4",
     "@types/jest": "^26.0.4",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mime": "^2.0.3",
     "@types/mongodb": "^3.5.25",
     "@types/multer": "^1.4.3",
     "@types/nodemailer": "^6.4.0",
