--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 #APPLICATION
 APP_SECRET=
+# no android funciona pelo ip e nao pelo nome
 APP_API_URL=http://localhost:3333
+# APP_API_URL=http://192.168.0.4:3333
 APP_WEB_URL=http://localhost:3000
 
 # MAIL
